2008-Nov-09  yselkowitz

	* lib/fox-build.cygclass: Removed.

2008-Nov-05  yselkowitz

	* lib/xfce4.cygclass: Update for 4.6-beta.

	* bin/cygport.in (__pkg_dist): In the case of split binary packages, 
	an empty binary package is not required to be aside the source package.

	* Post-release version bump.

2008-Oct-28  yselkowitz

	* Tagged 0.9.3.

	* bin/cygport.in: Pack PVP into PV[1-*].
	(__pkg_binpkg): Accept foo_CONTENTS over PKG_CONTENTS[].

	* lib/gst-plugins0.10.cygclass: Add new plugins in -bad 0.10.9.

	* lib/xorg.cygclass: Add GIT_URI; rename font packages.

2008-Sep-28  yselkowitz

	* lib/bzr.cygclass,
	lib/cvs.cygclass: Only check for _URI during fetch.

	* bin/cygport.in (__src_fetch),
	lib/Makefile.am:
	lib/fossil.cygclass: NEW cygclass for Fossil checkouts.

	* bin/cygport.in (__src_fetch),
	lib/bzr.cygclass,
	lib/cvs.cygclass,
	lib/git.cygclass,
	lib/hg.cygclass,
	lib/mtn.cygclass,
	lib/svn.cygclass: Use inherited() instead of _USE_rcs_FETCH.

	* bin/cygport.in (pushd, popd): Added overrides. Use throughout.

	* lib/ruby.cygclass (ruby_install): Accept RDOC_MODULE.
	(rubyinto, doruby): Added.

	* lib/ruby-gnome2.cygclass: Add ruby-goocanvas.

2008-Sep-23  yselkowitz

	* lib/berkdb.cygclass (berkdb_compile) [tcl]: tclConfig.sh moved.

	* lib/autotools.cygclass (cygautoreconf),
	lib/gnome2.cygclass (gnome2_autoreconf): Detect missing LT_OUTPUT.

	* lib/autotools.cygclass (cygautoreconf): Better detection of autoconf2.5.
	Catch illegal WANT_AUTOCONF value.

	* bin/cygport.in (cygtest): Don't exit if tests causes errors.

2008-Sep-15  yselkowitz

	* lib/distutils.cygclass (distutils_install):
	Collision-protect zope/__init__.py in distutils.
	lib/zope.cygclass: Remove.

	* configure.ac: Post-release version bump.

2008-Sep-10  yselkowitz

	* Tagged 0.9.2.

	* Website moved to sourceware.org.

2008-Sep-07  yselkowitz

	* lib/ruby-gnome2.cygclass: Remove support for obsolete versions.
	(ruby_gnome2_install): Only install implibs where required.
