@@ -895,8 +895,6 @@ readonly -f fetch __mirror_fetch __src_fetch __srpm_extract unpack __gpg_verify 
 ################################################################################
 
 lndirs() {
-	local d;
-	local f;
 	local fromdir=${1};
 	local todir=${2};
 
@@ -909,22 +907,8 @@ lndirs() {
 		todir=.;
 	fi
 
-	if check_prog lndir
-	then
-		lndir -silent ${fromdir} ${todir} || error "lndir failed"
-	else
-		cd ${fromdir};
-
-		for d in $(find . -type d)
-		do
-			mkdir -p ${todir}/${d#./};
-		done
-
-		for f in $(find . ! -type d)
-		do
-			ln -sf ${fromdir}/${f#./} ${todir}/${f#./};
-		done
-	fi
+	check_prog_req lndir
+	lndir -silent ${fromdir} ${todir} || error "lndir failed"
 }
 
 # standard GNU make call
